# prompt-hacking

./: .gitignore  0_setup.ipynb  1_introduction_and_contents.ipynb  2_introduction_to_llms.ipynb  3_prompt_hacking_intro.ipynb  4_attacks.ipynb  5_defenses.ipynb  README.md  pyproject.toml  webinar.ipynb
.github/workflows/: pythonapp.yml
